name:                   between-semigrupoids
version:                0.1.0.0
-- synopsis:
-- description:
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015-2016, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

flag old-semigroupoids
  description:          Build with semigroupoids <5.
  default:              False

library
  hs-source-dirs:       src
  exposed-modules:      Data.Function.Between.Semigroupoid

  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude

  build-depends:        base >=4.7 && <5

  if flag(old-semigroupoids)
    build-depends:      semigroupoids >=4.2 && <5
  else
    build-depends:
        semigroupoids ==5.*
      , semigroupoid-extras >=0.2 && <6

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
